# sglang-diffusion-routing

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  development.md  diff.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: cpu-test-api.yml  lint.yml  pr-test.yml
docs/: launcher.md  rl_training.md  sleep_wake.md  trajectory_and_logprob.md  update_weights.md  update_weights_from_disk.md
examples/: local_launcher.yaml
examples/diffusion_router/: demo.py
scripts/: check_router.sh  env_install.sh  launch_fake_workers.sh  launch_workers.sh  run_fake_worker.sh  run_model_serve.sh  run_router.sh  send_request.sh  stop_fake_worker.sh  stop_worker.sh
src/sglang_d_router/cli/: demo.py
src/sglang_diffusion_routing/: __init__.py  __main__.py
src/sglang_diffusion_routing/cli/: __init__.py  main.py
src/sglang_diffusion_routing/launcher/: __init__.py  backend.py  config.py  local.py  utils.py
src/sglang_diffusion_routing/router/: __init__.py  diffusion_router.py
tests/: conftest.py  fake_worker.py  test_health_quarantine.py  test_router_basic.py  test_router_proxy.py  test_update_weights_broadcast.py  utils_uvicorn.py
tests/benchmarks/diffusion_router/: bench_router.py  bench_routing_algorithms.py
tests/benchmarks/diffusion_router/outputs/routing_algo_compare_20260220_215441/: routing_algorithm_comparison.csv  routing_algorithm_comparison.json
tests/e2e/: test_e2e_sglang.py
tests/integration/: __init__.py  common.py  conftest.py  fake_worker.py  test_api.py  test_cli.py  test_runtime.py
tests/unit/: fake_worker.py  test_cli.py  test_diffusion_router.py  test_fake_e2e.py  test_launcher.py  test_router_endpoints.py
