[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-d-router"
version = "0.0.1"
description = "SGLang Diffusion Router (ported from radixark/miles#544)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "httpx>=0.25",
  "pydantic>=2",
  "requests>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
sglang-d-router-demo = "sglang_d_router.cli.demo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
