[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-diffusion-routing"
version = "0.1.1"
description = "Load-balancing router for SGLang diffusion workers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "omegaconf>=2.3",
    "uvicorn>=0.30",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
]

[project.scripts]
sglang-d-router = "sglang_diffusion_routing.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest",
    "PyYAML",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]
